--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -78,16 +78,12 @@ jobs:
       - name: Setup test suite
         run: tox run -vv --notest --skip-missing-interpreters false
         env:
-          CHICKENSTATS_USERNAME: ${{ secrets.CHICKENSTATS_USERNAME }}
-          CHICKENSTATS_PASSWORD: ${{ secrets.CHICKENSTATS_PASSWORD }}
           TOX_GH_MAJOR_MINOR: ${{ matrix.python }}
 
       - name: Run tox
-        run: tox run -c ./sdk/tox.ini # --skip-pkg-install
+        run: tox run --conf ./sdk/tox.ini --workdir ./sdk --root ./sdk # --skip-pkg-install
 
         env:
-          CHICKENSTATS_USERNAME: ${{ secrets.CHICKENSTATS_USERNAME }}
-          CHICKENSTATS_PASSWORD: ${{ secrets.CHICKENSTATS_PASSWORD }}
           GITHUB_ACTIONS: true
           TOX_GH_MAJOR_MINOR: ${{ matrix.python }}
           COVERAGE_FILE_NAME: ./.coverage.${{ matrix.tox }}-${{ matrix.os-alt }}
