--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -76,7 +76,7 @@ jobs:
           TOX_GH_MAJOR_MINOR: ${{ matrix.python }}
 
       - name: Setup test suite
-        run: tox run -vv --notest --skip-missing-interpreters false
+        run: tox run --conf ./sdk/tox.ini --workdir ./sdk --root ./sdk -vv --notest --skip-missing-interpreters false
         env:
           TOX_GH_MAJOR_MINOR: ${{ matrix.python }}
 
@@ -98,7 +98,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.tox }}-${{ matrix.os-alt }}
-          path: ./sdk/.coverage.${{ matrix.tox }}-${{ matrix.os-alt }}
+          path: ./.coverage.${{ matrix.tox }}-${{ matrix.os-alt }}
           include-hidden-files: true
 
   report:
