--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,3 +33,8 @@ members = [
 
 [tool.uv.sources]
 chickenstats-api = { workspace = true }
+
+[dependency-groups]
+dev = [
+    "chickenstats-api",
+]
