Adding pypi url
Adding pypi url to config.yaml, which flows through to setup.py in the package

--- a/config.yaml
+++ b/config.yaml
@@ -12,6 +12,7 @@ gitRepoId: chickenstats-api-python
 packageName: chickenstats_api
 packageVersion: 0.0.1
 projectName: chickenstats-api
+packageUrl: "https://pypi.org/project/chickenstats-api/"
 class_overrides:
   AppApiApiModelsChickenNhlPbpPublic:
     class_name: PlayByPlay
